2008-11-02	Jannis Pohlmann <jannis@xfce.org>

	* panel-plugin/xfce-volume-button.c: Change step and page increment
	  size to 0.01 instead of 0.05. This allows for better fine-tuning of
	  the volume. Having a 5% step size has been annoying.

2008-11-01	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/*.{c,h}, panel-plugin/*.{c,h}, xfce4-mixer/*.{c,h}:
	  Update FSF address in the GPL license headers.

2008-10-31	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/*.{c,h}, panel-plugin/*.{c,h}, xfce4-mixer/*.{c,h}:
	  Fix license headers, use GPL instead of LGPL everywhere.

2008-10-19	Jannis Pohlmann <jannis@xfce.org>

	* xfce4-mixer/xfce4-mixer.desktop.in.in: Fix icon name. It has to be
	  multimed-volume-control.

2008-10-14	Olivier Fourdan <olivier@xfce.org>

	* xfce4-mixer/xfce-mixer.c: Fix build with gstreamer < 0.10.14.

2008-10-13	Jannis Pohlmann <jannis@xfce.org>

	* NEWS: Update news for the first beta release. Translators will be
	  mentioned explicitely in the release notes.

2008-10-06	Jannis Pohlmann <jannis@xfce.org>

	* NEWS: Update news again.

2008-10-06	Jannis Pohlmann <jannis@xfce.org>

	* NEWS: Update news.

2008-10-06	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/, panel-plugin/, xfce4-mixer/: Move the
	  xfce_mixer_stock_init() call into xfce_mixer_init(). Rename the
	  instance init function of XfceMixer to xfce_mixer_instance_init().
	  Reorder the includes and only include libxfce4mixer.h of the
	  header files in libxfce4mixer/.

2008-10-06	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/libxfce4mixer.c: Call gst_bus_remove_signal_watch() in
	  xfce_mixer_shutdown().
	* xfce4-mixer/xfce-mixer-track.c: Remove locking mechanism from the
	  lock button toggle handler.

2008-10-06	Jannis Pohlmann <jannis@xfce.org>

	* configure.in.in: Add DEBUG define for the DBG macro.

2008-10-06	Jannis Pohlmann <jannis@xfce.org>

	* libxfce4mixer/, panel-plugin/, xfce4-mixer/: Remove XfceMixerCard