@@ -2,13 +2,13 @@
 
 stockdir = $(datadir)/icons/hicolor/24x24/stock/media
 stock_DATA =								\
-	audio-volume-00.png						\
-	audio-volume-01.png						\
-	audio-volume-02.png						\
-	audio-volume-03.png						\
-	audio-volume-04.png						\
-	audio-volume-05.png						\
-	audio-volume-06.png						\
+	stock_xfce4-mixer-volume-00.png					\
+	stock_xfce4-mixer-volume-01.png					\
+	stock_xfce4-mixer-volume-02.png					\
+	stock_xfce4-mixer-volume-03.png					\
+	stock_xfce4-mixer-volume-04.png					\
+	stock_xfce4-mixer-volume-05.png					\
+	stock_xfce4-mixer-volume-06.png					\
 	stock_xfce4-mixer-record.png					\
 	stock_xfce4-mixer-no-record.png					\
 	stock_xfce4-mixer-muted.png					\
